@@ -1,6 +1,8 @@
 2016-02-10  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (discard_until): Prevent a chain of editing actions from
 	continuing after a discard.  This fixes Savannah bug #47104.
+	* src/files.c (get_full_path): Plug a sneaky memory leak.  This fixes
+	Savannah bug #47003 reported and solved by Mike Frysinger.
 
 2016-02-09  Benno Schulenberg  <bensberg@justemail.net>
 	* src/files.c (stat_with_alloc, open_buffer, write_file): Check the
